src/parser/snapshots/python_parser__parser__tests__parser__parse_yield_expr.snap
---
source: src/parser/tests.rs
expression: "parse(\"\nyield *y\nyield x\nyield x + 1\nyield a and b\nyield f()\nyield [1, 2]\nyield {3, 4}\nyield {i: 5}\nyield 7, 8\nyield (9, 10)\nyield 1 == 1\n\")"
---
ParsedFile {
    ast: Module {
        body: [
            Expression(
                ExpressionStmt {
                    value: Yield(
                        YieldExpr {
                            value: Some(
                                Starred(
                                    StarredExpr {
                                        value: Id(
                                            Identifier {
                                                id: "y",
                                                range: 8..9,
                                            },
                                        ),
                                        range: 7..9,
                                    },
                                ),
                            ),
                            range: 1..9,
                        },
                    ),
                    range: 1..9,
                },
            ),
            Expression(
                ExpressionStmt {
                    value: Yield(
                        YieldExpr {
                            value: Some(
                                Id(
                                    Identifier {
                                        id: "x",
                                        range: 16..17,
                                    },
                                ),
                            ),
                            range: 10..17,
                        },
                    ),
                    range: 10..17,
                },
            ),
            Expression(
                ExpressionStmt {
                    value: Yield(
                        YieldExpr {
                            value: Some(
                                BinaryOp(
                                    BinaryOpExpr {
                                        left: Id(
                                            Identifier {
                                                id: "x",
                                                range: 24..25,
                                            },
                                        ),
                                        op: Add,
                                        right: Literal(
                                            LiteralExpr {
                                                value: Int(
                                                    "1",
                                                ),
                                                range: 28..29,
                                            },
                                        ),
                                        range: 24..29,
                                    },
                                ),
                            ),
                            range: 18..29,
                        },
                    ),
                    range: 18..29,
                },
            ),
            Expression(
                ExpressionStmt {
                    value: Yield(
                        YieldExpr {
                            value: Some(
                                BoolOp(
                                    BoolOpExpr {
                                        op: And,
                                        values: [
                                            Id(
                                                Identifier {
                                                    id: "a",
                                                    range: 36..37,
                                                },
                                            ),
                                            Id(
                                                Identifier {
                                                    id: "b",
                                                    range: 42..43,
                                                },
                                            ),
                                        ],
                                        range: 36..43,
                                    },
                                ),
                            ),
                            range: 30..43,
                        },
                    ),
                    range: 30..43,
                },
            ),
            Expression(
                ExpressionStmt {
                    value: Yield(
                        YieldExpr {
                            value: Some(
                                Call(
                                    CallExpr {
                                        func: Id(
                                            Identifier {
                                                id: "f",
                                                range: 50..51,
                                            },
                                        ),
                                        args: Arguments {
                                            args: [],
                                            kw_args: [],
                                            range: 51..53,
                                        },
                                        range: 50..53,
                                    },
                                ),
                            ),
                            range: 44..53,
                        },
                    ),
                    range: 44..53,
                },
            ),
            Expression(
                ExpressionStmt {
                    value: Yield(
                        YieldExpr {
                            value: Some(
                                List(
                                    ListExpr {
                                        elements: [
                                            Literal(
                                                LiteralExpr {
                                                    value: Int(
                                                        "1",
                                                    ),
                                                    range: 61..62,
                                                },
                                            ),
                                            Literal(
                                                LiteralExpr {
                                                    value: Int(
                                                        "2",
                                                    ),
                                                    range: 64..65,
                                                },
                                            ),
                                        ],
                                        range: 60..66,
                                    },
                                ),
                            ),
                            range: 54..66,
                        },
                    ),
                    range: 54..66,
                },
            ),
            Expression(
                ExpressionStmt {
                    value: Yield(
                        YieldExpr {
                            value: Some(
                                Set(
                                    SetExpr {
                                        elements: [
                                            Literal(
                                                LiteralExpr {
                                                    value: Int(
                                                        "3",
                                                    ),
                                                    range: 74..75,
                                                },
                                            ),
                                            Literal(
                                                LiteralExpr {
                                                    value: Int(
                                                        "4",
                                                    ),
                                                    range: 77..78,
                                                },
                                            ),
                                        ],
                                        range: 73..79,
                                    },
                                ),
                            ),
                            range: 67..79,
                        },
                    ),
                    range: 67..79,
                },
            ),
            Expression(
                ExpressionStmt {
                    value: Yield(
                        YieldExpr {
                            value: Some(
                                Dict(
                                    DictExpr {
                                        keys: [
                                            Some(
                                                Id(
                                                    Identifier {
                                                        id: "i",
                                                        range: 87..88,
                                                    },
                                                ),
                                            ),
                                        ],
                                        values: [
                                            Literal(
                                                LiteralExpr {
                                                    value: Int(
                                                        "5",
                                                    ),
                                                    range: 90..91,
                                                },
                                            ),
                                        ],
                                        range: 86..92,
                                    },
                                ),
                            ),
                            range: 80..92,
                        },
                    ),
                    range: 80..92,
                },
            ),
            Expression(
                ExpressionStmt {
                    value: Yield(
                        YieldExpr {
                            value: Some(
                                Tuple(
                                    TupleExpr {
                                        elements: [
                                            Literal(
                                                LiteralExpr {
                                                    value: Int(
                                                        "7",
                                                    ),
                                                    range: 99..100,
                                                },
                                            ),
                                            Literal(
                                                LiteralExpr {
                                                    value: Int(
                                                        "8",
                                                    ),
                                                    range: 102..103,
                                                },
                                            ),
                                        ],
                                        range: 99..103,
                                    },
                                ),
                            ),
                            range: 93..103,
                        },
                    ),
                    range: 93..103,
                },
            ),
            Expression(
                ExpressionStmt {
                    value: Yield(
                        YieldExpr {
                            value: Some(
                                Tuple(
                                    TupleExpr {
                                        elements: [
                                            Literal(
                                                LiteralExpr {
                                                    value: Int(
                                                        "9",
                                                    ),
                                                    range: 111..112,
                                                },
                                            ),
                                            Literal(
                                                LiteralExpr {
                                                    value: Int(
                                                        "10",
                                                    ),
                                                    range: 114..116,
                                                },
                                            ),
                                        ],
                                        range: 110..117,
                                    },
                                ),
                            ),
                            range: 104..117,
                        },
                    ),
                    range: 104..117,
                },
            ),
            Expression(
                ExpressionStmt {
                    value: Yield(
                        YieldExpr {
                            value: Some(
                                Compare(
                                    CompareExpr {
                                        left: Literal(
                                            LiteralExpr {
                                                value: Int(
                                                    "1",
                                                ),
                                                range: 124..125,
                                            },
                                        ),
                                        ops: [
                                            Eq,
                                        ],
                                        comparators: [
                                            Literal(
                                                LiteralExpr {
                                                    value: Int(
                                                        "1",
                                                    ),
                                                    range: 129..130,
                                                },
                                            ),
                                        ],
                                        range: 124..130,
                                    },
                                ),
                            ),
                            range: 118..130,
                        },
                    ),
                    range: 118..130,
                },
            ),
        ],
        range: 0..130,
    },
    parse_errors: [],
}
