src/parser/snapshots/python_parser__parser__tests__parser__parse_yield_from_expr.snap
---
source: src/parser/tests.rs
expression: "parse(\"\nyield from x\nyield from x + 1\nyield from a and b\nyield from f()\nyield from [1, 2]\nyield from {3, 4}\nyield from {i: 5}\nyield from 7, 8\nyield from (9, 10)\nyield from 1 == 1\n\")"
---
ParsedFile {
    ast: Module {
        body: [
            Expression(
                ExpressionStmt {
                    value: YieldFrom(
                        YieldFromExpr {
                            value: Id(
                                Identifier {
                                    id: "x",
                                    range: 12..13,
                                },
                            ),
                            range: 1..13,
                        },
                    ),
                    range: 1..13,
                },
            ),
            Expression(
                ExpressionStmt {
                    value: YieldFrom(
                        YieldFromExpr {
                            value: BinaryOp(
                                BinaryOpExpr {
                                    left: Id(
                                        Identifier {
                                            id: "x",
                                            range: 25..26,
                                        },
                                    ),
                                    op: Add,
                                    right: Literal(
                                        LiteralExpr {
                                            value: Int(
                                                "1",
                                            ),
                                            range: 29..30,
                                        },
                                    ),
                                    range: 25..30,
                                },
                            ),
                            range: 14..30,
                        },
                    ),
                    range: 14..30,
                },
            ),
            Expression(
                ExpressionStmt {
                    value: YieldFrom(
                        YieldFromExpr {
                            value: BoolOp(
                                BoolOpExpr {
                                    op: And,
                                    values: [
                                        Id(
                                            Identifier {
                                                id: "a",
                                                range: 42..43,
                                            },
                                        ),
                                        Id(
                                            Identifier {
                                                id: "b",
                                                range: 48..49,
                                            },
                                        ),
                                    ],
                                    range: 42..49,
                                },
                            ),
                            range: 31..49,
                        },
                    ),
                    range: 31..49,
                },
            ),
            Expression(
                ExpressionStmt {
                    value: YieldFrom(
                        YieldFromExpr {
                            value: Call(
                                CallExpr {
                                    lhs: Id(
                                        Identifier {
                                            id: "f",
                                            range: 61..62,
                                        },
                                    ),
                                    args: Arguments {
                                        args: [],
                                        kw_args: [],
                                        range: 62..64,
                                    },
                                    range: 61..64,
                                },
                            ),
                            range: 50..64,
                        },
                    ),
                    range: 50..64,
                },
            ),
            Expression(
                ExpressionStmt {
                    value: YieldFrom(
                        YieldFromExpr {
                            value: List(
                                ListExpr {
                                    elements: [
                                        Literal(
                                            LiteralExpr {
                                                value: Int(
                                                    "1",
                                                ),
                                                range: 77..78,
                                            },
                                        ),
                                        Literal(
                                            LiteralExpr {
                                                value: Int(
                                                    "2",
                                                ),
                                                range: 80..81,
                                            },
                                        ),
                                    ],
                                    range: 76..82,
                                },
                            ),
                            range: 65..82,
                        },
                    ),
                    range: 65..82,
                },
            ),
            Expression(
                ExpressionStmt {
                    value: YieldFrom(
                        YieldFromExpr {
                            value: Set(
                                SetExpr {
                                    elements: [
                                        Literal(
                                            LiteralExpr {
                                                value: Int(
                                                    "3",
                                                ),
                                                range: 95..96,
                                            },
                                        ),
                                        Literal(
                                            LiteralExpr {
                                                value: Int(
                                                    "4",
                                                ),
                                                range: 98..99,
                                            },
                                        ),
                                    ],
                                    range: 94..100,
                                },
                            ),
                            range: 83..100,
                        },
                    ),
                    range: 83..100,
                },
            ),
            Expression(
                ExpressionStmt {
                    value: YieldFrom(
                        YieldFromExpr {
                            value: Dict(
                                DictExpr {
                                    keys: [
                                        Some(
                                            Id(
                                                Identifier {
                                                    id: "i",
                                                    range: 113..114,
                                                },
                                            ),
                                        ),
                                    ],
                                    values: [
                                        Literal(
                                            LiteralExpr {
                                                value: Int(
                                                    "5",
                                                ),
                                                range: 116..117,
                                            },
                                        ),
                                    ],
                                    range: 112..118,
                                },
                            ),
                            range: 101..118,
                        },
                    ),
                    range: 101..118,
                },
            ),
            Expression(
                ExpressionStmt {
                    value: YieldFrom(
                        YieldFromExpr {
                            value: Tuple(
                                TupleExpr {
                                    elements: [
                                        Literal(
                                            LiteralExpr {
                                                value: Int(
                                                    "7",
                                                ),
                                                range: 130..131,
                                            },
                                        ),
                                        Literal(
                                            LiteralExpr {
                                                value: Int(
                                                    "8",
                                                ),
                                                range: 133..134,
                                            },
                                        ),
                                    ],
                                    range: 130..134,
                                },
                            ),
                            range: 119..134,
                        },
                    ),
                    range: 119..134,
                },
            ),
            Expression(
                ExpressionStmt {
                    value: YieldFrom(
                        YieldFromExpr {
                            value: Tuple(
                                TupleExpr {
                                    elements: [
                                        Literal(
                                            LiteralExpr {
                                                value: Int(
                                                    "9",
                                                ),
                                                range: 147..148,
                                            },
                                        ),
                                        Literal(
                                            LiteralExpr {
                                                value: Int(
                                                    "10",
                                                ),
                                                range: 150..152,
                                            },
                                        ),
                                    ],
                                    range: 146..153,
                                },
                            ),
                            range: 135..153,
                        },
                    ),
                    range: 135..153,
                },
            ),
            Expression(
                ExpressionStmt {
                    value: YieldFrom(
                        YieldFromExpr {
                            value: Compare(
                                CompareExpr {
                                    left: Literal(
                                        LiteralExpr {
                                            value: Int(
                                                "1",
                                            ),
                                            range: 165..166,
                                        },
                                    ),
                                    ops: [
                                        Eq,
                                    ],
                                    comparators: [
                                        Literal(
                                            LiteralExpr {
                                                value: Int(
                                                    "1",
                                                ),
                                                range: 170..171,
                                            },
                                        ),
                                    ],
                                    range: 165..171,
                                },
                            ),
                            range: 154..171,
                        },
                    ),
                    range: 154..171,
                },
            ),
        ],
        range: 0..171,
    },
    parse_errors: [],
}
